--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Paris (France) -- Fiction'
 - !lcsh 'Women sales personnel -- Fiction'
 - !lcsh 'Seduction -- Fiction'
+- GITenberg
 title: Naisten aarreaitta
 url: http://www.gutenberg.org/ebooks/43610
